I FIXED THE FLICKERING FROM THE SLIDESHOW BG WITH PRELOADING WOOOO!!!!!

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,11 @@ html {
     perspective: 1000;
 }
 
+img {
+    display:none;
+    background-repeat: no-repeat;
+}
+
 .flex-container{
     height: 100vh;
     width: 100vw;
@@ -51,7 +56,6 @@ main {
     -webkit-perspective: 1000;
     perspective: 1000;
     transform-style: preserve-3d;
-
 }
 
 @keyframes slideBg {
@@ -107,6 +111,8 @@ main {
     width:100vw;
     position:relative;
     align-items:center;
+    z-index:40;
+
 }
 
 #loading {
@@ -117,7 +123,7 @@ main {
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    z-index:10;
+    z-index:50;
 }
 
 #quote-box {
@@ -130,7 +136,7 @@ main {
     width: 40%;
     min-width:550px;
     min-height: 30%;
-    max-height:45%;
+    max-height:40%;
     display:grid;
     justify-items: center;
     align-items: center;
@@ -190,6 +196,7 @@ button {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    user-select: none;
 }
 
 button:focus {
